--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bit-vector.jsx",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "BitVector implementation for JSX/JS/AMD/CommonJS",
   "scripts": {
-    "build": "grunt build",
-    "test": "grunt test",
-    "doc": "grunt doc"
+    "build": "./node_modules/.bin/grunt build",
+    "test": "./node_modules/.bin/grunt test",
+    "doc": "./node_modules/.bin/grunt doc"
   },
   "engines": {
     "node": ">=0.8.0"
@@ -27,7 +27,7 @@
   },
   "directories": {
     "doc": "./doc",
-    "lib": "./lib",
+    "lib": "./src",
     "test": "./test"
   },
   "repository": {
@@ -38,8 +38,9 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt": "~0.4.1",
     "grunt-jsx": ">=0.1.5",
-    "binary-io.jsx": "~0.2.0",
-    "binary-support.jsx": "~0.1.0"
+    "binary-io.jsx": "~0.3.0",
+    "binary-support.jsx": "~0.2.0",
+    "grunt-cli": "~0.1.10"
   },
   "author": "shibukawa",
   "license": "MIT"
